--- a/Experiments/plot/merge_results.ipynb
+++ b/Experiments/plot/merge_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,10 +85,10 @@
     "                                                   (df_run['execution']=='Total') &\n",
     "                                                   (df_run['platform']==platform) &\n",
     "                                                   (df_run['seq_rand']==seq_rand) &\n",
-    "                                                   (df_run['nrow']==nrow)]\n",
+    "                                                   (df_run['nrow']==nrow)\n",
+    "                                                   ]\n",
     "\n",
     "                            list_total = np.array(df_total['time'].tolist())  \n",
-    "\n",
     "                            df_cpu_io =  df_run.loc[(df_run['baseline']==baseline) &\n",
     "                                                    (df_run[\"language\"]==language) &\n",
     "                                                    (df_run['taskset']==taskset) &\n",
@@ -100,30 +100,37 @@
     "                            list_cpu_io = np.array(df_cpu_io['time'].tolist())  \n",
     "\n",
     "                            df_load =  df_load_to_memory.loc[(df_load_to_memory[\"language\"]==language) &\n",
-    "                                                             (df_load_to_memory['taskset']==taskset) &                                                                                                                    \n",
-    "                                                             (df_load_to_memory['platform']==platform) &\n",
+    "                                                             (df_load_to_memory['taskset']==taskset) &                                                                                       (df_load_to_memory['platform']==platform) &\n",
     "                                                             (df_load_to_memory['nrow']==nrow)]\n",
     "\n",
     "                            list_load = np.array(df_load['time'].tolist())  \n",
     "\n",
     "\n",
     "                            if len(list_total) > 0:\n",
-    "                                    \n",
+    "                                     \n",
     "                                    time_total = calc_mean(list=list_total)    \n",
     "                                    time_cpu_io = calc_mean(list=list_cpu_io)\n",
     "                                    time_load = calc_mean(list=list_load)                                    \n",
     "\n",
     "                                    base = baseline.replace(\"FlatBuffersJava\", \"FlatBufJava\")                                    \n",
-    "                                    if execution == \"CPU\" :\n",
-    "                                        print(f'total={list_total} cpu={list_cpu_io}  load={list_load}  ')\n",
+    "                                    if execution == \"CPU\" :                                       \n",
     "                                        total = time_total - time_load \n",
     "                                        io  = time_total - time_cpu_io\n",
+    "                                        if io < 0:\n",
+    "                                            io=0.1\n",
+    "\n",
     "                                        cpu  = time_cpu_io - time_load\n",
+    "                                        if cpu < 0:\n",
+    "                                            cpu=0.1\n",
     "                                     \n",
     "                                    elif execution == \"IO\":                                 \n",
     "                                        total = time_total\n",
     "                                        cpu = time_total - time_cpu_io       \n",
     "                                        io = time_cpu_io\n",
+    "                                        if cpu<0:\n",
+    "                                            cpu=0.1\n",
+    "                                        if io<0:\n",
+    "                                            io=0.1    \n",
     "\n",
     "                                    result_total = [base,language,taskset,'Total',platform,seq_rand,nrow,f'{total:.2f}']\n",
     "                                    result_cpu = [base,language,taskset,'CPU',platform,seq_rand,nrow,f'{cpu:.2f}']\n",
@@ -141,76 +148,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "def results():\n",
-    "    root_path = '../archive'\n",
-    "    # write_results = [f'{root_path}/read_write/CPP_R13_Experiment1_Write_times.dat', \n",
-    "    #                  f'{root_path}/read_write/Java_R1_Experiment1_Write_times.dat',\n",
-    "    #                  f'{root_path}/read_write/Java_R2_Experiment1_Write_times.dat',\n",
-    "    #                  f'{root_path}/read_write/Java_R3_Experiment1_Write_times.dat',\n",
-    "    #                  f'{root_path}/read_write/Rust_R13_Experiment1_Write_times.dat']\n",
+    "    root_path = '../results'    \n",
     "\n",
-    "    # read_results = [f'{root_path}/read_write/CPP_R13_Experiment2_Read_times.dat', \n",
-    "    #                 f'{root_path}/read_write/Java_R1_Experiment2_Read_times.dat',\n",
-    "    #                 f'{root_path}/read_write/Java_R2_Experiment2_Read_times.dat',\n",
-    "    #                 f'{root_path}/read_write/Java_R3_Experiment2_Read_times.dat',\n",
-    "    #                 f'{root_path}/read_write/Rust_R13_Experiment2_Read_times.dat']                 \n",
-    "\n",
-    "\n",
-    "   \n",
-    "    # load_to_memory_results = [f'{root_path}/read_write/CPP_R13_Experiment1_LoadToMemory_times.dat',\n",
-    "    #                           f'{root_path}/read_write/Java_R1_Experiment1_LoadToMemory_times.dat',\n",
-    "    #                           f'{root_path}/read_write/Java_R2_Experiment1_LoadToMemory_times.dat',\n",
-    "    #                           f'{root_path}/read_write/Java_R3_Experiment1_LoadToMemory_times.dat',\n",
-    "    #                           f'{root_path}/read_write/Rust_R13_Experiment1_LoadToMemory_times.dat']\n",
-    "\n",
-    "    write_results = [f'{root_path}/_results/Experiment1_Write_times.dat']\n",
-    "\n",
-    "    read_results = [f'{root_path}/_results/Experiment2_Read_times.dat']                 \n",
-    "   \n",
-    "    load_to_memory_results = [f'{root_path}/_results/Experiment1_LoadToMemory_times.dat']\n",
+    "    write_results = [f'{root_path}/Experiment1_Write_times.dat']\n",
+    "    read_results = [f'{root_path}/Experiment2_Read_times.dat']                    \n",
+    "    load_to_memory_results = [f'{root_path}/Experiment1_LoadToMemory_times.dat']\n",
     "   \n",
     "    read_write_header = [\"baseline\",\"language\",\"taskset\",\"execution\",\"platform\",\"seq_rand\",\"nrow\",\"time\"]   \n",
     "    load_to_memory_header = [\"language\",\"platform\",\"taskset\",\"nrow\",\"time\"]\n",
     "\n",
-    "    baselines = [\"MessagePackRust\"]\n",
-    "    #[\"DefaultJava\",\"Json+GzipJava\",\"BsonJava\",\"ProtoBufJava\",\"KryoJava\",\"ByteBufferJava\",\"JsonJava\",\"FlatBuffersJava\",\n",
-    "    #            \"HandcodedCPP\",\"inPlaceCPP\",\"BoostCPP\",\"ProtoBufCPP\",\"BsonCPP\",\"FlatBufCPP\",\n",
-    "    #            \"JsonRust\",\"BincodeRust\",\"MessagePackRust\",\"BsonRust\",\"FlexBufRust\"]    \n",
+    "    baselines = [\"DefaultJava\",\"Json+GzipJava\",\"BsonJava\",\"ProtoBufJava\",\"KryoJava\",\"ByteBufferJava\",\"JsonJava\",\"FlatBuffersJava\",\n",
+    "                \"HandcodedCPP\",\"inPlaceCPP\",\"BoostCPP\",\"ProtoBufCPP\",\"BsonCPP\",\"FlatBufCPP\",\n",
+    "                \"JsonRust\",\"BincodeRust\",\"MessagePackRust\",\"BsonRust\",\"FlexBufRust\"]    \n",
     "    \n",
     "    nrows = [5000000,4000000,3000000,2000000,1000000]\n",
     "\n",
     "    executions = [\"CPU\", \"IO\", \"Total\"]\n",
-    "    platforms  = [\"Parallel\" ] #\"Single\" , \n",
+    "    platforms  = [\"Parallel\",\"Single\"] \n",
     "    seq_rands  = [\"Sequential\", \"Random\"]\n",
     "    languages  = [\"Java\", \"CPP\",\"Rust\"]\n",
     "    tasksets   = [True, False]\n",
     "\n",
-    "    df_write = merge_results(write_results)\n",
+    "    df_write = merge_results(write_results)    \n",
     "    df_read = merge_results(read_results)\n",
-    "    df_load_to_memory = merge_results(load_to_memory_results)\n",
-    "    #print(df_load_to_memory)\n",
-    "\n",
-    "    #Parallel,false,5000000,\n",
-    "\n",
-    "    df_load =  df_load_to_memory.loc[(df_load_to_memory[\"language\"]=='CPP') &\n",
-    "                                     (df_load_to_memory['taskset']==False) &                                                                                                                    \n",
-    "                                     (df_load_to_memory['platform']=='Parallel') &\n",
-    "                                     (df_load_to_memory['nrow']==5000000)]\n",
-    "    \n",
-    "    list_load = np.array(df_load['time'].tolist())  \n",
-    "    # print(df_load)                                 \n",
-    "\n",
-    "    #calc_read_write(header,baselines, languages, tasksets, platforms,seq_rands, nrows, df_run, df_load, execution):\n",
+    "    df_load = merge_results(load_to_memory_results)   \n",
     "   \n",
     "    df_write_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=platforms,\n",
-    "                                      seq_rands= seq_rands, nrows=nrows, df_run=df_write, df_load_to_memory= df_load_to_memory, execution=\"CPU\")\n",
+    "                                      seq_rands= seq_rands, nrows=nrows, df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\")\n",
     "\n",
     "                            \n",
-    "    df_write_final.to_csv(\"write3.csv\", index=False)                  \n",
+    "    df_write_final.to_csv(\"results/Exp1_write.dat\", index=False)                  \n",
     "  \n",
     "\n",
     "\n",
@@ -219,18 +191,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total=[20283 20554 20796 20236 20176] cpu=[20714 20619 20348 20413 20476]  load=[20066 20137 20343 20369 20428 20482 20461 20300 20367 20746 20520 20507\n",
-      " 20399 20119 20092 20448 20804 20221 20189 20466 20264 20396 20139 20255]  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results()"
    ]
