--- a/Experiments/plot/merge_results.ipynb
+++ b/Experiments/plot/merge_results.ipynb
@@ -2,10 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: pandas in /home/saeed/.local/lib/python3.10/site-packages (1.5.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3/dist-packages (from pandas) (2022.1)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (1.23.4)\n",
+      "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: numpy in /home/saeed/.local/lib/python3.10/site-packages (1.23.4)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: scipy in /home/saeed/.local/lib/python3.10/site-packages (1.9.2)\n",
+      "Requirement already satisfied: numpy<1.26.0,>=1.18.5 in /home/saeed/.local/lib/python3.10/site-packages (from scipy) (1.23.4)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
+    "%pip install pandas\n",
+    "%pip install numpy\n",
+    "%pip install scipy\n",
+    "\n",
     "import pandas as pd\n",
     "import sys\n",
     "import os\n",
@@ -17,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
