--- a/Experiments/plot/merge_results.ipynb
+++ b/Experiments/plot/merge_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -11,9 +11,9 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in /home/saeed/.local/lib/python3.10/site-packages (1.5.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3/dist-packages (from pandas) (2022.1)\n",
       "Requirement already satisfied: numpy>=1.21.0 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (1.23.4)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3/dist-packages (from pandas) (2022.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
       "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,11 +190,13 @@
     "    baselines = [\"DefaultJava\",\"Json+GzipJava\",\"BsonJava\",\"ProtoBufJava\",\"KryoJava\",\"ByteBufferJava\",\"JsonJava\",\"FlatBuffersJava\",\n",
     "                \"HandcodedCPP\",\"inPlaceCPP\",\"BoostCPP\",\"ProtoBufCPP\",\"BsonCPP\",\"FlatBufCPP\",\n",
     "                \"JsonRust\",\"BincodeRust\",\"MessagePackRust\",\"BsonRust\",\"FlexBufRust\"]    \n",
+    "\n",
+    "     \n",
     "    \n",
     "    nrows = [5000000,4000000,3000000,2000000,1000000]\n",
     "\n",
     "    executions = [\"CPU\", \"IO\", \"Total\"]\n",
-    "    platforms  = [\"Parallel\",\"Single\"] \n",
+    "    platforms  = [\"Parallel\", \"Single\"] #\n",
     "    seq_rands  = [\"Sequential\", \"Random\"]\n",
     "    languages  = [\"Java\", \"CPP\",\"Rust\"]\n",
     "    tasksets   = [True, False]\n",
@@ -216,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
