--- a/Experiments/plot/merge_results.ipynb
+++ b/Experiments/plot/merge_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -12,8 +12,8 @@
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in /home/saeed/.local/lib/python3.10/site-packages (1.5.0)\n",
       "Requirement already satisfied: numpy>=1.21.0 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (1.23.4)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3/dist-packages (from pandas) (2022.1)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3/dist-packages (from pandas) (2022.1)\n",
       "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,20 +141,20 @@
     "                                    if execution == \"CPU\" :                                       \n",
     "                                        total = time_total - time_load \n",
     "                                        io  = time_total - time_cpu_io\n",
-    "                                        if io < 0:\n",
+    "                                        if io <= 0:\n",
     "                                            io=0.1\n",
     "\n",
     "                                        cpu  = time_cpu_io - time_load\n",
-    "                                        if cpu < 0:\n",
+    "                                        if cpu <= 0:\n",
     "                                            cpu=0.1\n",
     "                                     \n",
     "                                    elif execution == \"IO\":                                 \n",
     "                                        total = time_total\n",
     "                                        cpu = time_total - time_cpu_io       \n",
     "                                        io = time_cpu_io\n",
-    "                                        if cpu<0:\n",
+    "                                        if cpu< 0.1:\n",
     "                                            cpu=0.1\n",
-    "                                        if io<0:\n",
+    "                                        if io<= 0.1:\n",
     "                                            io=0.1    \n",
     "\n",
     "                                    result_total = [base,language,taskset,'Total',platform,seq_rand,nrow,f'{total:.2f}']\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,8 +208,12 @@
     "    df_write_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=platforms,\n",
     "                                      seq_rands= seq_rands, nrows=nrows, df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\")\n",
     "\n",
+    "    df_read_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=platforms,\n",
+    "                                      seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\")                                  \n",
+    "\n",
     "                            \n",
-    "    df_write_final.to_csv(\"results/Exp1_write.dat\", index=False)                  \n",
+    "    df_write_final.to_csv(\"results/Exp1_write.dat\", index=False)  \n",
+    "    df_read_final.to_csv(\"results/Exp2_read.dat\", index=False)                \n",
     "  \n",
     "\n",
     "\n",
@@ -218,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
