--- a/Experiments/plot/Plot.tex
+++ b/Experiments/plot/Plot.tex
@@ -180,12 +180,12 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
         \caption{Experiment1: Write times for 5M Tweet Objects (Single)}
 \end{figure*}
 
-\tikzsetnextfilename{Exp1_write_parallel}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp1_write_parallel}
-        \caption{Experiment1: Write times for 5M Tweet Objects (parallel)}
-\end{figure*}
+% \tikzsetnextfilename{Exp1_write_parallel}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp1_write_parallel}
+%         \caption{Experiment1: Write times for 5M Tweet Objects (parallel)}
+% \end{figure*}
 
 
 
@@ -196,12 +196,12 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
         \caption{Experiment1: Sequential Read times for 5M Tweet Objects (Single)}
 \end{figure*}
 
-\tikzsetnextfilename{Exp2_seq_read_parallel}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp2_seq_read_parallel}
-        \caption{Experiment1: Sequential Read times for 5M Tweet Objects (Parallel)}
-\end{figure*}
+% \tikzsetnextfilename{Exp2_seq_read_parallel}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp2_seq_read_parallel}
+%         \caption{Experiment1: Sequential Read times for 5M Tweet Objects (Parallel)}
+% \end{figure*}
 
 
 \maketitle
