Update results, add Exp3 & 4 diagrams

--- a/Experiments/plot/Plot.tex
+++ b/Experiments/plot/Plot.tex
@@ -33,6 +33,7 @@
 \usepgfplotslibrary{groupplots}
 
 %\pgfplotsset{compat=1.9}
+\pgfplotsset{compat=1.12}
 
 % \usepackage{mathptmx}
 % \usepackage{amsmath}
@@ -173,12 +174,12 @@
 Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 \end{IEEEkeywords}}
 
-\tikzsetnextfilename{Exp1_write_single}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp1_write_single}
-        \caption{Experiment1: Write times for 5M Tweet Objects (Single)}
-\end{figure*}
+% \tikzsetnextfilename{Exp1_write_single}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp1_write_single}
+%         \caption{Experiment1: Write times for 5M Tweet Objects (Single)}
+% \end{figure*}
 
 % \tikzsetnextfilename{Exp1_write_parallel}
 %     \begin{figure*}[h]
@@ -187,21 +188,56 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 %         \caption{Experiment1: Write times for 5M Tweet Objects (parallel)}
 % \end{figure*}
 
-
-
-\tikzsetnextfilename{Exp2_seq_read_single}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp2_seq_read_single}
-        \caption{Experiment1: Sequential Read times for 5M Tweet Objects (Single)}
-\end{figure*}
+% \tikzsetnextfilename{Exp2_seq_read_single}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp2_seq_read_single}
+%         \caption{Experiment2: Sequential Read times for 5M Tweet Objects (Single)}
+% \end{figure*}
 
 % \tikzsetnextfilename{Exp2_seq_read_parallel}
 %     \begin{figure*}[h]
 %         \centering
 %         \input{figures/Exp2_seq_read_parallel}
-%         \caption{Experiment1: Sequential Read times for 5M Tweet Objects (Parallel)}
+%         \caption{Experiment2: Sequential Read times for 5M Tweet Objects (Parallel)}
 % \end{figure*}
+
+% \tikzsetnextfilename{Exp3a_seq_read_single_tstrue}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp3a_seq_read_single_tstrue}
+%         \caption{Experiment3a: (Single)}
+% \end{figure*}
+
+% \tikzsetnextfilename{Exp3b_seq_read_single_tsfalse}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp3b_seq_read_single_tsfalse}
+%         \caption{Experiment3b: (Single)}
+% \end{figure*}
+
+
+% \tikzsetnextfilename{Exp4_seq_read_parallel}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp4_seq_read_parallel}
+%         \caption{Experiment4: (parallel)}
+% \end{figure*}
+
+
+% \tikzsetnextfilename{Exp3_legend}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp3_legend}
+%         \caption{Experiment3: (legend)}
+% \end{figure*}
+
+\tikzsetnextfilename{Exp4_legend}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp4_legend}
+        \caption{Experiment4: (legend)}
+\end{figure*}
 
 
 \maketitle
