--- a/Experiments/plot/merge_results.ipynb
+++ b/Experiments/plot/merge_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -11,9 +11,9 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in /home/saeed/.local/lib/python3.10/site-packages (1.5.0)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (1.23.4)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
       "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3/dist-packages (from pandas) (2022.1)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (1.23.4)\n",
       "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,28 +55,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calc_mean(list):\n",
+    "def calc_mean(list): \n",
     "   \n",
-    "    mean = np.mean(list)/1000\n",
-    "    return mean\n",
-    "\n",
+    "    mean = np.mean(list)  \n",
+    "    return mean/1000  \n",
     "    # std = np.std(list)\n",
     "    # normal_list = []\n",
+    "    # nz=[]\n",
     "    # for l in list:\n",
+    "    #     if std == 0:\n",
+    "    #         break\n",
     "    #     z = (l-mean)/std\n",
-    "    #     if z <= 1 and z>= -1:\n",
+    "    #     if z <=0.5:\n",
     "    #         normal_list.append(l)\n",
-    "    #     avg_value = np.mean(normal_list) /1000 \n",
-    "    #     return avg_value "
+    "    #     nz.append(z)\n",
+    "    # if len(normal_list) == 0:\n",
+    "    #     avg_value = min(list)         \n",
+    "    # else:\n",
+    "    #     avg_value = np.mean(normal_list)\n",
+    "    # return avg_value/1000  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,11 +147,11 @@
     "                                    if execution == \"CPU\" :                                       \n",
     "                                        total = time_total - time_load \n",
     "                                        io  = time_total - time_cpu_io\n",
-    "                                        if io <= 0:\n",
+    "                                        if io <= 0.1:\n",
     "                                            io=0.1\n",
     "\n",
     "                                        cpu  = time_cpu_io - time_load\n",
-    "                                        if cpu <= 0:\n",
+    "                                        if cpu <= 0.1:\n",
     "                                            cpu=0.1\n",
     "                                     \n",
     "                                    elif execution == \"IO\":                                 \n",
@@ -173,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
