Update diagrams, results

--- a/Experiments/plot/Plot.tex
+++ b/Experiments/plot/Plot.tex
@@ -33,12 +33,8 @@
 \usepgfplotslibrary{groupplots}
 
 %\pgfplotsset{compat=1.9}
-\pgfplotsset{compat=1.12}
+%\pgfplotsset{compat=1.12}
 
-% \usepackage{mathptmx}
-% \usepackage{amsmath}
-% \usepackage{amssymb}
-% \usepackage{amsthm}
 
 
 \newcommand{\definevariableobject}[1] {\textcolor{black}{ 
@@ -55,14 +51,6 @@
 \definecolor{tug}{RGB}{247,1,70}
 \definecolor{tugb}{RGB}{120,137,251}
 
-% \definecolor{color1}{RGB}{100,149,237} % corn flower blue
-% \definecolor{color2}{RGB}{153,153,153} % light gray
-% \definecolor{color3}{RGB}{0,0,0} % black
-% \definecolor{color4}{RGB}{255,165,0} % orange
-% \definecolor{color5}{RGB}{255,69,0} % orange red
-% \definecolor{color6}{RGB}{77,77,77} % dark gray
-% \definecolor{color7}{RGB}{31,119,180}
-% \definecolor{color8}{RGB}{7,77,125}
 
 \definecolor{color1}{RGB}{100,149,237} % corn flower blue
 \definecolor{color2}{RGB}{153,153,153} % light gray
@@ -188,12 +176,12 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 %         \caption{Experiment1: Write times for 5M Tweet Objects (parallel)}
 % \end{figure*}
 
-% \tikzsetnextfilename{Exp2_seq_read_single}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp2_seq_read_single}
-%         \caption{Experiment2: Sequential Read times for 5M Tweet Objects (Single)}
-% \end{figure*}
+\tikzsetnextfilename{Exp2_seq_read_single}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp2_seq_read_single}
+        \caption{Experiment2: Sequential Read times for 5M Tweet Objects (Single)}
+\end{figure*}
 
 % \tikzsetnextfilename{Exp2_seq_read_parallel}
 %     \begin{figure*}[h]
@@ -232,12 +220,12 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 %         \caption{Experiment3: (legend)}
 % \end{figure*}
 
-\tikzsetnextfilename{Exp4_legend}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp4_legend}
-        \caption{Experiment4: (legend)}
-\end{figure*}
+% \tikzsetnextfilename{Exp4_legend}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp4_legend}
+%         \caption{Experiment4: (legend)}
+% \end{figure*}
 
 
 \maketitle
